complete mini app 1 tic tac toe

--- a/challenge_1/index.html
+++ b/challenge_1/index.html
@@ -1,2 +1,49 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Tic Tac Toe</title>
+</head>
+<body>
+  <h1> Tic Tac Toe</h1>
+  <div>
+    <span id='player'>X</span>
+    <span>'s turn</span>
+  </div>
+  <br>
 
+  <table style="width: 300px">
+    <tr style="height: 100px">
+      <td class="box" id='00'>_</td>
+      <td class="box" id='01'>_</td> 
+      <td class="box" id='02'>_</td>
+    </tr>
+    <tr style="height: 100px">
+      <td id='10'>_</td>
+      <td id='11'>_</td> 
+      <td id='12'>_</td>
+    </tr>
+    <tr style="height: 100px">
+      <td id='20'>_</td>
+      <td id='21'>_</td> 
+      <td id='22'>_</td>
+    </tr>
+  </table>
+
+  <div>
+    <button id='btn'>New Game</button>
+  </div>
+  <br>
+  <div>
+    <h3>Win Counts</h3>
+    <span id='player1'></span>
+    <span id='xcount'>0</span>
+    <br>
+    <span id='player2'></span>
+    <span id='ocount'>0</span>
+  </div>
+
+  <script src="app.js"></script>
+
+</body>
+</html>
 
