add color change after win

--- a/challenge_1/index.html
+++ b/challenge_1/index.html
@@ -13,19 +13,19 @@
 
   <table style="width: 300px">
     <tr style="height: 100px">
-      <td class="box" id='00'>_</td>
-      <td class="box" id='01'>_</td> 
-      <td class="box" id='02'>_</td>
+      <td style="text-align: center" id='00'>_</td>
+      <td style="text-align: center" id='01'>_</td> 
+      <td style="text-align: center" id='02'>_</td>
     </tr>
     <tr style="height: 100px">
-      <td id='10'>_</td>
-      <td id='11'>_</td> 
-      <td id='12'>_</td>
+      <td style="text-align: center" id='10'>_</td>
+      <td style="text-align: center" id='11'>_</td> 
+      <td style="text-align: center" id='12'>_</td>
     </tr>
     <tr style="height: 100px">
-      <td id='20'>_</td>
-      <td id='21'>_</td> 
-      <td id='22'>_</td>
+      <td style="text-align: center" id='20'>_</td>
+      <td style="text-align: center" id='21'>_</td> 
+      <td style="text-align: center" id='22'>_</td>
     </tr>
   </table>
 
