set up index.html and server

--- a/challenge_2/client/index.html
+++ b/challenge_2/client/index.html
@@ -1,2 +1,40 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <title>CVS Report</title>
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+</head>
+<body>
+  <h1> CVS Report </h1>
 
+  <form method="POST" action="/cvs">
+
+    First Name:
+    <input type="text" id="first-name" placeholder="enter First Name">
+    <br>
+    Last Name:
+    <input type="text" id="last-name" placeholder="enter Last Name">
+    <br>
+    County:
+    <input type="text" id="county" placeholder="enter County">
+    <br>
+    City:
+    <input type="text" id="city" placeholder="enter City">
+    <br>
+    Role:
+    <input type="text" id="role" placeholder="enter Person's Role">
+    <br>
+    Sales:
+    <input type="text" id="sales" placeholder="enter Sales">
+    <br>
+    Children:
+    <input type="text" id="children" placeholder="enter Children">
+    <br>
+    <input type="submit" value="Submit">
+
+  </form>
+
+  <script src="app.js"></script>
+</body>
+</html>
 
