server convert data to csv

--- a/challenge_2/client/index.html
+++ b/challenge_2/client/index.html
@@ -9,30 +9,10 @@
 
   <form method="post" action="/csv">
 
-<!--     First Name:
-    <input type="text" id="first-name" name="firstName" placeholder="enter First Name">
+    Input Data:
     <br>
-    Last Name:
-    <input type="text" id="last-name" name="lastName" placeholder="enter Last Name">
+    <textarea name="formData" placeholder="enter data here" style="width:400px; height:500px;"></textarea>
     <br>
-    County:
-    <input type="text" id="county" name="county" placeholder="enter County">
-    <br>
-    City:
-    <input type="text" id="city" name="city" placeholder="enter City">
-    <br>
-    Role:
-    <input type="text" id="role" name="role" placeholder="enter Person's Role">
-    <br>
-    Sales:
-    <input type="text" id="sales" name="sales" placeholder="enter Sales">
-    <br>
-    Children:
-    <input type="text" id="children" name="children" placeholder="enter Children">
-    <br> -->
-
-    Data:
-    <textarea name="formData"></textarea>
     <input type="submit" value="Submit">
 
   </form>
