able to render file to DOM, and move helper functions to separate file

--- a/challenge_2/client/index.html
+++ b/challenge_2/client/index.html
@@ -6,17 +6,13 @@
 </head>
 <body>
   <h1> CSV Report </h1>
-
   <form method="post" action="/csv">
-
     Input Data:
     <br>
-    <textarea name="formData" placeholder="enter data here" style="width:400px; height:500px;"></textarea>
+    <textarea name="formData" style="width:400px; height:300px;"></textarea>
     <br>
     <input type="submit" value="Submit">
-
   </form>
-
   <script src="app.js"></script>
 </body>
 </html>
