implement download csv data

--- a/challenge_2/client/index.html
+++ b/challenge_2/client/index.html
@@ -13,6 +13,8 @@
     <br>
     <input type="submit" value="Submit">
   </form>
+
+  <a href="/download/csvReport.csv" download>Download CSV Report</a>
   <script src="app.js"></script>
 </body>
 </html>
