--- a/challenge_3/public/index.html
+++ b/challenge_3/public/index.html
@@ -8,7 +8,7 @@
 <body>
     <div>
       <div id="app"></div>
-      <script type="module" src="App.js"></script>
+      <script type="module" src="App.js"></script
     </div>
 </body>
 </html>
